<resources>
    <string name="app_name">Organic Outlet</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="price_format">R$ %1$.2f</string>
    <string name="add_product">add product</string>
    <string name="product_image">Product image</string>
    <string name="new_product">NEW PRODUCT</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="url">URL</string>
    <string name="register_product">Register product</string>
    <string name="product_image_description">Product Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="desc_order">Desc. order</string>
    <string name="asc_order">Asc. order</string>
    <string name="creation_order">Creation Order</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_user">Register User</string>
    <string name="logout">Logout</string>
</resources>